fix: resolve css syntax and layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,6 @@
 
 /* Birthday Section */
 .birthday-section {
-  font-size: 5rem;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -94,7 +93,7 @@
 }
 
 .birthday-title {
-  font-size: 3rem;
+  font-size: 5rem;
   margin-bottom: 2rem;
   color: #fff;
   text-align: center;
